# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.sln  MyBoxDemo.sln  Parelhoen engine.md  README.md
Debug/: MyBoxDemo.ilk
GameEngine/: AppFacade.cpp  AppFacade.h  AppFacadeFactory.cpp  Application.cpp  Application.h  DynamicVerticesProvider.cpp  DynamicVerticesProvider.h  FrameResource.cpp  FrameResource.h  FrameResourceUpdater.cpp  FrameResourceUpdater.h  GeometryGenerator.h  GeometryStorage.cpp  GeometryStorage.h  ImGuiController.cpp  ImGuiController.h  MainPassData.h  MainPassDataProvider.cpp  MainPassDataProvider.h  MainScene.h  MainWindow.cpp  Material.h  MaterialsDataProvider.cpp  MaterialsDataProvider.h  MyBoxDemo.vcxproj  MyBoxDemo.vcxproj.filters  ObjectsDataProvider.cpp  ObjectsDataProvider.h  RenderItem.h  Renderer.cpp  Renderer.h  SrvHeapProvider.cpp  SrvHeapProvider.h  Texture.h  TexturesController.cpp  TexturesController.h  TexturesProvider.cpp  TexturesProvider.h  Vertex.h  Waves.h  (+3 more)
MyBoxDemo/: AppFacade.cpp  AppFacade.h  AppFacadeFactory.cpp  AppFacadeFactory.h  Application.cpp  Application.h  ApplicationContext.cpp  ApplicationContext.h  BoxApp.cpp  BoxApp.h  FrameResource.cpp  FrameResource.h  FrameResourceController.cpp  FrameResourceController.h  FrameResourceUpdater.cpp  FrameResourceUpdater.h  GeometryStorage.cpp  GeometryStorage.h  MainPassData.h  MainPassDataProvider.cpp  MainPassDataProvider.h  MainScene.cpp  MainScene.h  MaterialsDataProvider.cpp  MaterialsDataProvider.h  MyBoxDemo.aps  MyBoxDemo.cpp  MyBoxDemo.vcxproj  MyBoxDemo.vcxproj.filters  ObjectConstants.h  ObjectsDataProvider.cpp  ObjectsDataProvider.h  PassConstants.h  PipleneStateData.cpp  PipleneStateData.h  RenderItem.h  TextureStaticSamplers.h  TexturesController.cpp  UploadBuffer.h  Vertex.h  (+2 more)
MyBoxDemo/Debug/: vc142.idb
MyBoxDemo/Debug/MyBoxDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MyBoxDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/: CMakeLists.txt
app/src/: AppFacade.cpp  AppFacade.h  AppFacadeFactory.cpp  CameraViewModel.h  DynamicVertices.h  FrameResourceController.h  FrameResourceUpdater.cpp  GeometryStorage.cpp  GeometryStorage.h  ImGuiController.cpp  ImGuiController.h  MainPassData.h  MainPassDataProvider.cpp  MainPassDataProvider.h  MainPassModels.h  MainPassModelsListener.h  MainWindow.cpp  ObjectsDataProvider.cpp  ObjectsDataProvider.h  PassConstants.h  PipleneStateData.cpp  Renderer.cpp  Renderer.h  SrvHeapProvider.cpp  TexturesProvider.cpp  ViewController.cpp  ViewController.h  Waves.cpp
app_context/: CMakeLists.txt
app_context/src/: AppContext.cpp  AppContext.h  AppContextFactory.cpp  AppContextFactory.h  AppFacade.cpp
common/: CMakeLists.txt
core/: CMakeLists.txt
core/include/core/: AppFacade.h
core/src/: AppContext.cpp  AppContext.h  AppContextFactory.cpp  AppContextFactory.h  AppFacade.cpp  AppFacadeFactory.cpp  CameraView.cpp  CameraView.h  CameraViewModel.cpp  CameraViewModel.h  ConstantBufferUpdating.h  DynamicVertices.h  DynamicVerticesProvider.cpp  DynamicVerticesProvider.h  FogView.cpp  FogView.h  FogViewModel.cpp  FogViewModel.h  FrameResource.cpp  FrameResource.h  FrameResourceController.cpp  FrameResourceController.h  FrameResourceUpdater.cpp  FrameResourceUpdater.h  GPUService.cpp  GPUService.h  GeometryGenerator.cpp  GeometryGenerator.h  GeometryStorage.cpp  GeometryStorage.h  GeometryStorageConfigurator.cpp  GeometryStorageConfigurator.h  GeometryStorageFactory.cpp  GeometryStorageFactory.h  LightView.cpp  LightView.h  LightViewModel.cpp  LightViewModel.h  MainPassConstantBufferUpdater.h  MainPassDataProvider.cpp  (+52 more)
entt/: CMakeLists.txt
game/: CMakeLists.txt
game/include/game/: Scene.h
game/src/: Scene.cpp
imgui/: CMakeLists.txt
network/: CMakeLists.txt
network/include/network/: GameObject.h  GameObjectRegistry.h  MemoryBitStream.h  Mouse.h  NetworkManager.h  RoboCat.h  RoboMath.h  Shared.h  SocketAddress.h  SocketUtil.h  StringUtils.h  TCPSocket.h  Timing.h  UDPSocket.h  World.h  Yarn.h
network/src/: GameObject.cpp  GameObjectRegistry.cpp  MemoryBitStream.cpp  Mouse.cpp  NetworkManager.cpp  RoboCat.cpp  RoboMath.cpp  SocketAddress.cpp  SocketUtil.cpp  StringUtils.cpp  TCPSocket.cpp  Timing.cpp  UDPSocket.cpp  World.cpp  Yarn.cpp
rendering/: CMakeLists.txt
rendering/include/rendering/: Components.h  DynamicVerticesProvider.h  FrameResourceUpdater.h  GPUService.h  GPUServiceFactory.h  GameObject.h  GeometryStorage.h  MainPassData.h  MainPassDataProvider.h  MaterialsDataProvider.h  MaterialsDataProviderConfigurator.h  MeshGeometry.h  MirrorController.h  ObjectConstantBufferUpdater.h  Renderer.h  RingBuffer.h  Scene.h  SrvHeapProvider.h  TexturesProvider.h  ViewController.h
rendering/src/: CameraView.cpp  CameraViewModel.cpp  CameraViewModel.h  FogViewModel.cpp  FogViewModel.h  FrameResource.cpp  GPUServiceFactory.cpp  GameObject.cpp  GeometryStorage.cpp  GeometryStorageConfigurator.cpp  LightView.h  LightViewModel.h  MainPassConstantBufferUpdater.cpp  MainPassDataProvider.cpp  MaterialsDataProviderConfigurator.cpp  MeshData.h  MeshVertex.h  MirrorController.cpp  OBJFileLoader.cpp  ObjectConstantBufferUpdater.cpp  PSOProvider.h  PSOProviderConfigurator.cpp  PSOProviderConfigurator.h  PrimitiveView.cpp  PrimitiveViewModel.cpp  PrimitiveViewModel.h  Renderer.cpp  Scene.cpp  SrvHeapProvider.cpp  TextureStaticSamplers.cpp  TexturesProvider.cpp  ViewController.cpp  WaveFrontReader.h  Waves.h
view/: CMakeLists.txt
windows/: CMakeLists.txt
windows/src/: MainWindow.cpp  Resource.h
